--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,17 @@
 name = "GeometricOptimizers"
 uuid = "fc236c15-5557-4942-aa65-b650f329279e"
-authors = ["Michael Kraus"]
+authors = ["Michael Kraus", "Benedikt Brantner"]
 version = "1.0.0-DEV"
 
+[deps]
+
 [compat]
+SafeTestsets = "0.1.0"
 julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 
 [targets]
-test = ["Test"]
+test = ["Test", "SafeTestsets]
