--- a/Project.toml
+++ b/Project.toml
@@ -6,12 +6,14 @@ version = "1.0.0-DEV"
 [deps]
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
+LazyArrays = "5078a376-72f3-5289-bfd5-ec5146d43c02"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
 ChainRulesCore = "1.25.0"
 KernelAbstractions = "0.9.31"
+LazyArrays = "2.3.1"
 LinearAlgebra = "1.11.0"
 Random = "1.11.0"
 SafeTestsets = "0.1.0"
