--- a/Project.toml
+++ b/Project.toml
@@ -17,11 +17,13 @@ LazyArrays = "2.3.1"
 LinearAlgebra = "1.11.0"
 Random = "1.11.0"
 SafeTestsets = "0.1.0"
+Zygote = "0.7.1"
 julia = "1.6"
 
 [extras]
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [targets]
-test = ["Test", "SafeTestsets"]
+test = ["Test", "SafeTestsets", "Zygote"]
