--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -14,7 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Make docs (call julia documenter)
-        run: julia --project=docs --color=yes --threads=2 docs/make.jl
+        run: |
+          julia --project=docs -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+          julia --project=docs --color=yes --threads=2 docs/make.jl
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-docdeploy@v1
         env:
